# libDAI

./: .gitignore  BUILDING_WITH_CMAKE.txt  CMakeLists.txt  ChangeLog  Makefile  README  build_and_test.sh
CMakeModules/: FindCImg.cmake
analysis/: Flops_data_points.txt  flops_per_message.m  perf_plot.m  performance_b040.m  performance_baseline.m  roofline.m  roofline_mixed_baseline_b40.m  roofline_single_vs_double.m  runtime.m
examples/: CMakeLists.txt  Makefile  README_RECOMMENDATION.txt  example.cpp  example_imagesegmentation.cpp  example_recommendation.cpp
examples/ml-100k/: u1.base  u1.test  u1M.base  uNew1.base  uV2New1.base  uV2New1.test
examples/new_datasets/: .gitignore  README.txt  ml100kfull.test  ml1m.test
examples/new_datasets/scripts/: merge.py  split.py
examples/new_datasets/u1/: 128MoviesUID1.base  128MoviesUID1.test  256MoviesUID1.base  256MoviesUID1.test  32MoviesUID1.base  64MoviesUID1.base  64MoviesUID1.test
examples/recommendation_ref_files/: README.txt  u1.reference  uNew1.reference  uV2New1.reference
generateMovieData/: CMakeLists.txt  generate  generate.cpp  uNew1.test  uNew2.base  uNew2.test
include/dai/: AlignmentAllocator.h  CMakeLists.txt  alldai.h  bipgraph.h  bp.h  dai_config.h  daialg.h  doc.h  exceptions.h  factor.h  factorgraph.h  graph.h  mr.h  prob.h  properties.h  trwbp.h  util.h  weightedgraph.h
include/dai/utils/: timer.h
report/: .gitignore  00-abstract.tex  01-introduction.tex  02-background.tex  021-code.tex  03-method.tex  031-verification.tex  04-results.tex  05-conclusions.tex  06-appendix.tex  Makefile  README.txt  bibl_conf.bib  nju_notes_on_bp_methods.txt  nju_presentation_material.txt  report.tex
scripts/: build_and_test.sh  publish_measurements.sh
scripts/runtime/: measure_runtime.sh  merge_results.sh  old_measurements.txt
scripts/runtime/testfiles/: 32MoviesUID1.test  512MoviesUID1.base  512MoviesUID1.test  ml100kfull.base
src/: CMakeLists.txt  alldai.cpp  bipgraph.cpp  bp.cpp  bp_ext.cpp  daialg.cpp  factorgraph.cpp  glc.cpp  graph.cpp
swig/: dai.i
tests/: CMakeLists.txt  testdai.cpp  testfast.out
tests/unit/: CMakeLists.txt  clustergraph_test.cpp  graph_test.cpp  regiongraph_test.cpp  varset_test.cpp
utils/: CMakeLists.txt  createfg.cpp  fginfo.cpp
