ADD_EXECUTABLE (createfg createfg.cpp)
TARGET_LINK_LIBRARIES (createfg ${EXTRA_LIBS} ${Boost_PROGRAM_OPTIONS_LIBRARY})
INSTALL (TARGETS createfg DESTINATION bin)

ADD_EXECUTABLE (fg2dot fg2dot.cpp)
TARGET_LINK_LIBRARIES (fg2dot ${EXTRA_LIBS})
INSTALL (TARGETS fg2dot DESTINATION bin)

ADD_EXECUTABLE (fginfo fginfo.cpp)
TARGET_LINK_LIBRARIES (fginfo ${EXTRA_LIBS})
INSTALL (TARGETS fginfo DESTINATION bin)

ADD_EXECUTABLE (uai2fg uai2fg.cpp)
TARGET_LINK_LIBRARIES (uai2fg ${EXTRA_LIBS})
INSTALL (TARGETS uai2fg DESTINATION bin)

INSTALL (FILES viewfg DESTINATION bin)
